--- a/8140notes.tex
+++ b/8140notes.tex
@@ -179,6 +179,123 @@ change without taking all three into account.
 
 
 
+\section{Equestrian}
+
+
+
+\subsection{Donkey in Egypt}
+It is a pack animal, able to transport goods long distances.
+It is a saddle animal, for use in warfare and farming.
+It is draft animal, able to pull wheeled vehicles.
+
+It has endurance, intelligence, and great speed.
+
+\subsection{Camel in deserts and high plateaus.}
+
+
+Not only a pack animal, but a source of milk and meat, a battle animal,
+an animal for sport racing. The alpaca was used to produce fine fabrics.
+
+
+
+\subsection{Breakthrough in the Fertile Crescent}
+From 300 to 1000 CE, decisive civilizational advances in the Fertile
+Crescent, including Egypt, the Levant, and Mesopotamia. Similar advances 
+occurred in other riverine civilizations (the Indus, the Yellow River,
+and the Yangtze).
+
+Breakthrough included technological and institutional advances in 
+agriculture, public administration, writing and communications, 
+engineering, and long-distance trade.
+These breakthroughs gave rise to {\textbf {city-states}} and to 
+larger political units.
+
+
+The Fertile Crescent: written legal codes, public infrastructure, 
+tax collection. Mathematics, astronomy, engineering, metallurgy, 
+and medicine.
+
+
+
+
+
+
+\section{The Classical Age}
+We can call this an era of globalization by politics.
+
+\subsection{The Axial Age 800 - 300 BCE}
+Called by the twentieth-century German historian and philosopher
+Karl Jaspers. During a span of roughly five hundred years, there was 
+a simultaneous emergence of profound philosophical and religious 
+insights in four major civilizations of Eurasia: the Greco-Roman world
+of the Mediterranean Sea, the Persian world of western Asia, the Aryan
+world of northern India, and the Han Chinese world of East Asia. In all
+four cases, there occurred remarkable and foundational breakthroughs 
+in thinking about the meaning and purpose of life.
+
+
+
+
+\subsection{Thalassocracy and Tellurocracy}
+Thalatta meaning sea and cracy for power. Tellus for land.
+
+
+The Phoenicians created perhaps the most consequential thalassocracy
+in history, not only because of the accomplishment of crating a network
+of maritime trade throughout the Mediterranean region, but also
+by inspiring the Greek and Roman empires that followed.
+
+The Phoenicians displayed legendary trading and financial skills but 
+{\textbf {not}} military dominance. Thus they were conquered by the
+rising tellurocracies of the era.
+
+
+
+\subsection{The Emergence of the Classical Land-Based Empires}
+
+Persia attacked mainland Greece in 490 BCE, yielding three historic
+results:
+1. Athenian victory, Persia's ultimate defeat in the Persian-Greek Wars
+in 449 BCE. 2. The victory of Athens at  Marathon gave us the eponymous
+twenty-six-mile race. 3. The Wars marked the invention in the West of
+the field of historical writing with Herodotus's magnificent and
+pathbreaking Histories.
+
+
+Alexander, the student of Aristotle, the king of Macedonia.
+
+
+\subsubsection{The Roman Empire}
+
+The Roman Empire defeated Mecedonia during several wars between 214 
+and 148 BCE and then went on to conquer the other Hellenistic states,
+lies along the familiar east-west axis of the lucky latitudes.(check
+figure 5.3)
+
+Roman emperors stopped at the coastal edge of North Africa. To go further
+south meant to hit the desert, with its inhospitable and largely
+uneconomic environment.
+
+\subsubsection{Global trade within the lucky latitudes}
+Three great empires and the northern kingdoms of the Indian subcontinent
+engaged in a {\textbf {long-distance}} exchange of technologies,
+manufactured goods, and ideas, the so-called {\textbf {Silk Road}}.
+
+
+
+Bookmark: Figure 5.8
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
